# mcdata

./: .gitattributes  Cargo.toml  README.md  dprint.json  find_diffs.sh
.nlsp-settings/: rust_analyzer.json
class-parser/: .gitignore  build.gradle.kts  settings.gradle.kts
class-parser/gradle/wrapper/: gradle-wrapper.properties
class-parser/src/main/kotlin/: Main.kt  Schema.kt  Util.kt  Value.kt  Vm.kt
data-extractor/: .gitignore  DataExtractor_0.java  DataExtractor_1.java  DataExtractor_2.java  DataExtractor_3.java  gen_template_mods.ts  versions.json
src/: block_entity.rs  block_state.rs  combined.rs  data_version.rs  entity.rs  flatten.rs  lib.rs  util.rs
src/block_entity/: list.rs  macros.rs
src/block_state/: list.rs  macros.rs
src/entity/: list.rs  macros.rs
xtask/: Cargo.toml
xtask/src/: main.rs  schema.rs
