[workspace]
members = ["xtask"]

[package]
name = "mcdata"
version = "0.4.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
edition = "2021"
exclude = ["class-parser", "data-extractor", "find_diffs.sh", ".nlsp-settings", "dprint.json"]
keywords = ["minecraft", "nbt"]
license = "GPL-3.0-only"
repository = "https://github.com/RubixDev/mcdata"
description = "(De)serializable NBT structures for Minecraft"

[features]
#! ## Features
default = []

## Provide implementations of serde's `Serialize` and `Deserialize` traits for the various types
serde = ["dep:serde", "bounded-integer/serde1", "either/serde"]

## Include lists for known, typed block states
block-states = ["dep:bounded-integer"]
## Include lists for known, typed entities
entities = ["dep:either"]
## Include lists for known, typed block entities
block-entities = ["dep:either"]

#! ### Other Features

## Enable this when building the docs
docs = ["dep:document-features", "dep:rustc_version"]
## Enables all features required for running the tests
test = ["serde", "latest", "block-states", "entities", "block-entities"]

#! ### Minecraft Version Features

### FEATURE AUTOGEN START ###
## Enable all Minecraft version features
mc-all = [
    "1.14",
    "1.15",
    "1.15.2",
    "1.16",
    "1.16.2",
    "1.17",
    "1.18",
    "1.19",
    "1.19.1",
    "1.19.3",
    "1.19.4",
    "1.20",
    "1.20.2",
    "1.20.3",
    "1.20.5",
    "1.21",
    "1.21.2",
    "1.21.4",
    "1.21.5",
]
## Enable lists for the latest supported Minecraft version. Currently 1.21.5
latest = ["1.21.5"]
## Enable lists for Minecraft 1.14, extracted from Minecraft 1.14.4
"1.14" = []
## Enable lists for Minecraft 1.15, extracted from Minecraft 1.15.1
"1.15" = []
## Enable lists for Minecraft 1.15.2, extracted from Minecraft 1.15.2
"1.15.2" = []
## Enable lists for Minecraft 1.16, extracted from Minecraft 1.16.1
"1.16" = []
## Enable lists for Minecraft 1.16.2, extracted from Minecraft 1.16.5
"1.16.2" = []
## Enable lists for Minecraft 1.17, extracted from Minecraft 1.17.1
"1.17" = []
## Enable lists for Minecraft 1.18, extracted from Minecraft 1.18.2
"1.18" = []
## Enable lists for Minecraft 1.19, extracted from Minecraft 1.19
"1.19" = []
## Enable lists for Minecraft 1.19.1, extracted from Minecraft 1.19.2
"1.19.1" = []
## Enable lists for Minecraft 1.19.3, extracted from Minecraft 1.19.3
"1.19.3" = []
## Enable lists for Minecraft 1.19.4, extracted from Minecraft 1.19.4
"1.19.4" = []
## Enable lists for Minecraft 1.20, extracted from Minecraft 1.20.1
"1.20" = []
## Enable lists for Minecraft 1.20.2, extracted from Minecraft 1.20.2
"1.20.2" = []
## Enable lists for Minecraft 1.20.3, extracted from Minecraft 1.20.4
"1.20.3" = []
## Enable lists for Minecraft 1.20.5, extracted from Minecraft 1.20.6
"1.20.5" = []
## Enable lists for Minecraft 1.21, extracted from Minecraft 1.21.1
"1.21" = []
## Enable lists for Minecraft 1.21.2, extracted from Minecraft 1.21.3
"1.21.2" = []
## Enable lists for Minecraft 1.21.4, extracted from Minecraft 1.21.4
"1.21.4" = []
## Enable lists for Minecraft 1.21.5, extracted from Minecraft 1.21.5
"1.21.5" = []
### FEATURE AUTOGEN END ###

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = { version = "0.5.7", features = ["types", "std"], optional = true }
document-features = { version = "0.2.8", optional = true }
either = { version = "1.11.0", optional = true }
fastnbt = "2.5.0"
serde = { version = "1.0.198", features = ["derive"], optional = true }
strum = { version = "0.26.2", features = ["derive"] }

[build-dependencies]
rustc_version = { version = "0.4.0", optional = true }

[package.metadata.docs.rs]
all-features = true
